--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,31 @@ venv/
 ENV/
 env/
 .vscode/
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# uv
+uv.lock
+.cache/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+uv.lock
+uv.
+
+.toml
